# example-project

./: README.md  cli.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yaml
.github/workflows/: docker.yaml  release.yaml  tests.yaml
_modules/: index.html
_modules/example_project/config/: file_config.html
_sources/: contributing.md.txt
_sources/api/: example_project.config.file_config.rst.txt  example_project.config.rst.txt  example_project.rst.txt
api/: example_project.config.file_config.html  example_project.config.html  example_project.html  modules.html
docs/: Makefile
docs/source/: cli.md  conf.py  index.md
example_project/: __init__.py  __main__.py  _cli.py  _version.py
example_project/config/: __init__.py  file_config.py
tests/: test_cli.py
