[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "example-project"
description = "Brief description of the project"
version = "0.0.7"
authors = ["Justin Flannery <juftin@juftin.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/juftin/example-project"
repository = "https://github.com/juftin/example-project"
documentation = "https://juftin.github.io/example-project"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
click = ">=8.0.1"
pytest = { version = ">=5.2", optional = true }
flake8 = { version = ">=3.0.0", optional = true }
coverage = { version = ">=6.2", extras = ["toml"], optional = true }
mypy = { version = "^0.971", optional = true }
tox = { version = "^3.25.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
coverage = { extras = ["toml"], version = ">=6.2" }
flake8 = ">=3.0.0"
tox = "^3.25.1"
mypy = "^0.971"

[tool.poetry.extras]
dev = [
    "pytest",
    "flake8",
    "coverage",
    "mypy",
    "tox"
]

[tool.poetry.scripts]
example-project = "example_project._cli:command_line_interface"

[tool.poetry.urls]
Changelog = "https://github.com/juftin/example-project/releases"
